--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "mysql": "^2.13.0",
+    "nodemailer": "^4.6.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sequelize": "^3.30.4"
