--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "When you want to keep up with the applications you've sent",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js"  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
